--- a/Parstagram/Base.lproj/Main.storyboard
+++ b/Parstagram/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="neA-V7-uRu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -99,6 +99,7 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XhI-JY-kAg">
                                                     <rect key="frame" x="8" y="8" width="398" height="272"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="width" secondItem="XhI-JY-kAg" secondAttribute="height" multiplier="199:136" id="1g9-5a-uHu"/>
                                                         <constraint firstAttribute="width" secondItem="XhI-JY-kAg" secondAttribute="height" multiplier="414:283" id="INn-q8-GdR"/>
                                                         <constraint firstAttribute="width" secondItem="XhI-JY-kAg" secondAttribute="height" multiplier="199:136" id="qxa-Xc-gp1"/>
                                                     </constraints>
